Layout registrazione completato

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="type_name_player2">Type name player2</string>
     <string name="type_name_player3">Type name player3</string>
     <string name="let_it_bet">Let it bet</string>
+    <string name="insert_your_name_sub">The names of the bettors who want to try their luck</string>
 </resources>
