--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -6,4 +6,5 @@
     <string name="type_name_player2">Scrivi il nome 2</string>
     <string name="type_name_player3">Scrivi il nome 3</string>
     <string name="let_it_bet">Scommettiamo</string>
+    <string name="insert_your_name_sub">I nomi degli scommettitori che vogliono tentare la sorte</string>
 </resources>
