--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,10 @@
     <string name="app_name">Racing SNAI</string>
     <string name="insert_your_names">Enter your username</string>
     <string name="insert_your_name_sub">Type the names of the bettors who want to try their luck</string>
-    <string name="type_name_player1">Type name player1</string>
+    <string name="type_name_player1">First punter</string>
     <string name="type_name_player2">Second punter</string>
     <string name="type_name_player3">Third punter</string>
     <string name="let_it_bet">Let it bet</string>
     <string name="insert_name_toast">Enter at least one name</string>
+    <string name="info_addiction">* The game is forbidden for under 18s, it can cause pathological addiction</string>
 </resources>
