--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="back">Back</string>
     <string name="minus">Minus</string>
     <string name="plus">Plus</string>
+    <string name="start">Start</string>
 </resources>
