--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Corse SNAI</string>
-    <string name="insert_your_names">Inserire i propri username</string>
-    <string name="insert_your_name_sub">Scrivi i nomi degli scommettitori che vogliono tentare la sorte</string>
-    <string name="type_name_player1">Primo scommettitore</string>
-    <string name="type_name_player2">Secondo scommettitore</string>
-    <string name="type_name_player3">Terzo scommettitore</string>
+    <string name="insert_username">Inserisci il tuo Username</string>
+    <string name="insert_username_sub">Scrivi il nome dello scommettitore</string>
+    <string name="type_username">Scrivi il tuo username</string>
+    <string name="info_addiction">* Il gioco è vietato ai minori di 18 anni, può causare dipendenza patologica</string>
     <string name="let_it_bet">Scommettiamo</string>
-    <string name="insert_name_toast">Inserisci almeno un nome</string>
-    <string name="info_addiction">*Il gioco è vietato ai minori di 18 anni, può causare dipendenza patologica</string>
-    <string name="play_again">Gioca Ancora</string>
-    <string name="back">Indietro</string>
-    <string name="minus">Meno</string>
+    <string name="start">Inizia</string>
+    <string name="human_hate">Odio Umano</string>
+    <string name="industry_4_0">Industria 4.0</string>
+    <string name="too_much_security">Troppa sicurezza</string>
     <string name="plus">Più</string>
+    <string name="minus">Meno</string>
+    <string name="back">Indietro</string>
+    <string name="play_again">Rigioca</string>
+    <string name="insert_name_toast">Inserisci il tuo nome</string>
 </resources>
