--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Racing SNAI</string>
-    <string name="insert_your_names">Enter your username</string>
-    <string name="insert_your_name_sub">Type the names of the bettors who want to try their luck</string>
-    <string name="type_name_player1">First punter</string>
-    <string name="type_name_player2">Second punter</string>
-    <string name="type_name_player3">Third punter</string>
+    <string name="insert_username">Insert your Username</string>
+    <string name="insert_username_sub">Type the name of the bettor</string>
+    <string name="type_username">Type your username</string>
+    <string name="info_addiction">* This game is forbidden for under 18s, it can cause pathological addiction</string>
     <string name="let_it_bet">Let it bet</string>
-    <string name="insert_name_toast">Enter at least one name</string>
-    <string name="info_addiction">* The game is forbidden for under 18s, it can cause pathological addiction</string>
-    <string name="play_again">Play Again</string>
-    <string name="back">Back</string>
-    <string name="minus">Minus</string>
-    <string name="plus">Plus</string>
+    <string name="insert_name_toast">Enter your name</string>
     <string name="start">Start</string>
+    <string name="human_hate">Human Hate</string>
+    <string name="industry_4_0">Industry 4.0</string>
+    <string name="too_much_security">Too much security</string>
+    <string name="plus">Plus</string>
+    <string name="minus">Minus</string>
+    <string name="back">Back</string>
+    <string name="play_again">Play Again</string>
 </resources>
