--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="minus">Minus</string>
     <string name="back">Back</string>
     <string name="play_again">Play Again</string>
+    <string name="msg_win">YOUR WINNINGS</string>
 </resources>
