--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -15,4 +15,6 @@
     <string name="back">Indietro</string>
     <string name="play_again">Rigioca</string>
     <string name="insert_name_toast">Inserisci il tuo nome</string>
+    <string name="msg_win">La tua vincita</string>
+    <string name="info_game">Cosa porterà il mondo alla rovina</string>
 </resources>
