--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="back">Back</string>
     <string name="play_again">Play Again</string>
     <string name="msg_win">YOUR WINNINGS</string>
+    <string name="info_game">What will bring the world to ruin</string>
+    <string name="not_allowed">You can\'t</string>
+    <string name="error_name">Error, can\'t find your name</string>
 </resources>
