--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -16,5 +16,8 @@
     <string name="play_again">Rigioca</string>
     <string name="insert_name_toast">Inserisci il tuo nome</string>
     <string name="msg_win">La tua vincita</string>
-    <string name="info_game">Cosa porterà il mondo alla rovina</string>
+    <string name="info_game">Cosa porterà il mondo alla rovina?</string>
+    <string name="not_allowed">Non puoi</string>
+    <string name="error_name">Errore, impossibile trovare username</string>
+    <string name="welcome">Benvenuto</string>
 </resources>
