--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -20,4 +20,7 @@
     <string name="not_allowed">Non puoi</string>
     <string name="error_name">Errore, impossibile trovare username</string>
     <string name="welcome">Benvenuto</string>
+    <string name="msg_winner">IL VINCITORE</string>
+    <string name="got_it">Capito!</string>
+    <string name="str_win">" ha vinto la gara"</string>
 </resources>
