--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Corse SNAI</string>
+    <string name="app_name">La Fine</string>
     <string name="insert_username">Inserisci il tuo Username</string>
     <string name="insert_username_sub">Scrivi il nome dello scommettitore</string>
     <string name="type_username">Scrivi il tuo username</string>
