--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Racing SNAI</string>
+    <string name="app_name">The End</string>
     <string name="insert_username">Insert your Username</string>
     <string name="insert_username_sub">Type the name of the bettor</string>
     <string name="type_username">Type your username</string>
